--- a/Web Scraper/Soup, Sweet Soup/task.html
+++ b/Web Scraper/Soup, Sweet Soup/task.html
@@ -7,7 +7,7 @@
 <ol>
 	<li>Improve your code so that the function can take two parameters from the user input: the number of pages (an integer) and the type of articles (a string). The integer with the number of pages specifies the number of pages on which the program should look for the articles. </li>
 	<li>Go back to the <code class="java">https://www.nature.com/nature/articles</code> website and find out how to navigate between the pages with the <code class="java">requests</code> module changing the URL.</li>
-	<li>Create a directory named <code class="java">Page_N</code> (where <em>N</em> is the page number) for each page in the desired category, and put all the articles that are found on the page with the matched type to this directory.</li>
+	<li>Create a directory named <code class="java">Page_N</code> (where <em>N</em> is the page number corresponding to the number input by the user) for each page. Search and collect all articles page by page; filter all the articles by the article type and put all the articles that are found on the page with the matched type to the directory <em>Page_N</em>. Mind that when the user enters some number, for example, 4, the program should search all pages up to that number and the respective folders (Folder 1, Folder 2, Folder 3, Folder 4) should be created. Mind also that in articles of different types the content is contained in different tags.</li>
 	<li>Save the articles to separate <code class="java">*.txt</code> files. Keep the same processing of the titles for the filenames as in the previous stage. You can give users some feedback on completion, but it is not required.</li>
 </ol>
 
